fixed alignment issues on teaching/work

--- a/src/pages/pages/work/style2.scss
+++ b/src/pages/pages/work/style2.scss
@@ -26,8 +26,8 @@
 }
 #Logo {
     display: inline-block;
-    margin-left: 1005px;
-    margin-top: 1005px;
+    margin-left: 105px;
+    margin-top: 105px;
     width:10%;
 }
 #Titre {
